--- a/style.css
+++ b/style.css
@@ -36,23 +36,52 @@ button {
         top: 60px;
         right: 0px;
         margin-left: auto;
+
         /* text-align: right; */
     }
     button {
         cursor: none;
     }
 }
+button {
+    background-color: black;
+    color:whitesmoke;
+    font-size: 25px;
+    margin-left: 100px ;
+    outline: none;
+    width: 160px;
+    height: 45px;
+    border-radius: 7px;
+    box-shadow: inset 0 20px 4px -19px rgba(255, 255, 255, 0.4), 0 12px 12px 0 rgba(0, 0, 0, 0.3);
 
-.del {
-    display: block;
+        
+
 }
+.img-head {
+    display: block;
+    border-radius:0px 5% 50% 0;
+    /* clip-path: polygon(0 0, 100% 0, 100% 20%, 0 89%); */
+    clip-path: polygon(0 0, 100% 0, 100% 26%, 0 100%);
+
+    /* clip-path: polygon(95% 0, 100% 25%, 33% 76%, 0 100%, 0 49%, 0% 0%); */
+}
+
 .background {
     width: 60%;
     height: 80px;
     display: flex;
     justify-items: flex-end;
-   
-}  
+    /* clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); */
+
+
+
+}
+.clipe {
+    /* clip-path: polygon(0 0, 100% 0, 100% 26%, 0 100%); */
+
+}
+
+
   /* cover */
 .container {
     height: 50vh;
@@ -158,7 +187,12 @@ button {
     /* writing-mode: vertical-rl;
     text-orientation: mixed; */
 }
-
+/* 
+@media only screen and (min-width: 1000px) {
+    .txt-mode {
+        font-size: small;
+    }
+} */
 
 .txt-body {
 
@@ -169,7 +203,7 @@ button {
     /* top: 450px; */
     writing-mode: vertical-rl;
     text-orientation: mixed;
-    margin-top:300px ;
+    margin-top:300px;
     width: 50%;
     padding: 100px;
     text-align: center;
@@ -204,6 +238,9 @@ button {
     background: rgb(8,32,52);
     background: linear-gradient(90deg, rgba(8,32,52,1) 17%, rgba(11,44,69,1) 37%);
     width: 60%;
+    border-radius:92% 8% 0% 100% / 94% 13% 87% 6%;
+    clip-path: polygon(100% 0%, 100% 47%, 100% 100%, 0 100%, 0 53%, 42% 27%);
+
 }
 
 
@@ -215,6 +252,7 @@ button {
     width: 90%;
     height: 330px;
     margin-left: auto;
+    border-radius: 100% 0 0 0;
 }
 #news {
     color: white;
@@ -223,6 +261,28 @@ button {
     right: 30px;
     margin-left: auto;
 }
+.ml6 {
+    position: relative;
+    font-weight: 900;
+    font-size: 1.3em;
+  }
+  
+  .ml6 .text-wrapper {
+    position: relative;
+    display: inline-block;
+    padding-top: 0.2em;
+    padding-right: 0.05em;
+    padding-bottom: 0.1em;
+    overflow: hidden;
+  }
+  
+  .ml6 .letter {
+    display: inline-block;
+    line-height: 1em;
+  }
+
+
+
 /* sectio{
     bottom: 0;
     width: 100%;
