--- a/style.css
+++ b/style.css
@@ -22,25 +22,31 @@ body {
 /* Top right text */
 .top-right {
     position: absolute;
-    top: 80px;
+    top: 110px;
     right: 200px;
     margin-left: auto;
+    font-size: 1.5em;
     /* text-align: right; */
 }
 button {
     cursor: pointer;
 }
-@media only screen and (max-width: 1000px) {
+@media screen and (max-width: 992px) {
     .top-right {
         position: absolute;
         top: 60px;
         right: 0px;
         margin-left: auto;
+        font-size: 1em;
 
         /* text-align: right; */
     }
     button {
         cursor: none;
+        height: 25px;
+        width: 100px;
+        outline: none;
+
     }
 }
 button {
@@ -59,25 +65,25 @@ button {
 }
 .img-head {
     display: block;
-    border-radius:0px 5% 50% 0;
+    border-radius:0px 3% 100% 0;
+
     /* clip-path: polygon(0 0, 100% 0, 100% 20%, 0 89%); */
-    clip-path: polygon(0 0, 100% 0, 100% 26%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 16%, 0 100%);
 
     /* clip-path: polygon(95% 0, 100% 25%, 33% 76%, 0 100%, 0 49%, 0% 0%); */
 }
 
+
 .background {
-    width: 60%;
-    height: 80px;
+    width: 40%;
+    height: 290px;
+    margin-top: -273px;
     display: flex;
+    /* transform:rotate(-25deg); */
     justify-items: flex-end;
-    /* clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); */
+    clip-path: polygon(0 68%, 100% 0, 100% 39%, 0% 100%);
 
 
-
-}
-.clipe {
-    /* clip-path: polygon(0 0, 100% 0, 100% 26%, 0 100%); */
 
 }
 
@@ -148,11 +154,11 @@ button {
     margin-left: auto;
 }
 
-@media only screen and (max-width: 1000px) {
+@media  screen and (max-width: 1000px) {
     .top-right-about {
         color: black;
         position: absolute;
-        margin-top: 100px;
+        margin-top: 5px;
         left: 200px;
         margin-left: auto;
     }
@@ -160,16 +166,16 @@ button {
 #consulting {
     margin-top: 80px;
     transform:rotate(-15deg);
-    left: 50px;
+    left: 0px;
     position: absolute;
     text-align: left;
 }
-@media only screen and (max-width: 1000px) {
+@media screen and (max-width: 1000px) {
     #consulting {
         font-size: large;
-        margin-top: 10px;
+        margin-top: 0px;
         transform:rotate(-15deg);
-        left: 20px;
+        left: 10px;
         position: absolute;
         text-align: left;
     }  
@@ -238,8 +244,9 @@ button {
     background: rgb(8,32,52);
     background: linear-gradient(90deg, rgba(8,32,52,1) 17%, rgba(11,44,69,1) 37%);
     width: 60%;
-    border-radius:92% 8% 0% 100% / 94% 13% 87% 6%;
-    clip-path: polygon(100% 0%, 100% 47%, 100% 100%, 0 100%, 0 53%, 42% 27%);
+    border-radius: 100% 0 0 0;
+    /* border-radius:79% 21% 0% 100% / 94% 28% 72% 6%;  */
+    /* clip-path: polygon(100% 0%, 100% 47%, 100% 100%, 0 100%, 0 53%, 32% 17%); */
 
 }
 
