--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
     margin: auto 0;
 }
+html {
+    scroll-behavior: smooth;
+}
 .zone {
     position: relative;
     /* text-align: left; */
@@ -28,8 +31,16 @@ body {
     font-size: 1.5em;
     /* text-align: right; */
 }
-button {
+.button {
     cursor: pointer;
+    outline: none;
+
+}
+a {
+    text-decoration: none;
+    color: whitesmoke;
+    border-bottom: 3px solid transparent;
+    font-size: 30px;
 }
 @media screen and (max-width: 992px) {
     .top-right {
@@ -41,7 +52,7 @@ button {
 
         /* text-align: right; */
     }
-    button {
+    .button {
         cursor: none;
         height: 25px;
         width: 100px;
@@ -49,8 +60,9 @@ button {
 
     }
 }
-button {
+.button {
     background-color: black;
+    padding: 9px;
     color:whitesmoke;
     font-size: 25px;
     margin-left: 100px ;
@@ -59,9 +71,6 @@ button {
     height: 45px;
     border-radius: 7px;
     box-shadow: inset 0 20px 4px -19px rgba(255, 255, 255, 0.4), 0 12px 12px 0 rgba(0, 0, 0, 0.3);
-
-        
-
 }
 .img-head {
     display: block;
@@ -75,18 +84,27 @@ button {
 
 
 .background {
+    display: block;
     width: 40%;
-    height: 290px;
-    margin-top: -273px;
-    display: flex;
+    height: 10%;
+    margin-top: -29.6%;
+    /* display: flex; */
     /* transform:rotate(-25deg); */
-    justify-items: flex-end;
-    clip-path: polygon(0 68%, 100% 0, 100% 39%, 0% 100%);
+    /* justify-items: flex-end; */
+    /* clip-path: polygon(0 80%, 100% 28%, 100% 43%, 0% 100%); */
+    clip-path: polygon(0 69%, 100% 26%, 100% 45%, 0 86%);
 
-
+    border-bottom-right-radius: 100%;
+    border-top-right-radius: 50%
 
 }
-
+/* @media only screen and (max-width: 1000px) {
+    .background {
+        display: block;
+        width: 40%;
+        height: 10%;
+        margin-top: -30%;
+} */
 
   /* cover */
 .container {
@@ -119,8 +137,8 @@ button {
 /* section2 */
 .grid-wrapper {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    margin-top: 60px;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 2fr));
+    margin-top: 0;
     /* margin-top: 200px; */
 }
 
@@ -132,25 +150,38 @@ button {
 .box {
     position: absolute;
     /* top: 450px; */
-    margin-top: 5px;
+    margin-top: 0px;
     right: 0;
-    width: 100%;
+    width: 50%;
     margin-left: auto;
 }
 
 #trash-img {
-    margin-top: 0px;
-    right: 0;
-    width: 40%;
+    margin-top: -200px;
+    right: 1px;
+    position: absolute;
+    /* width: 27%; */
     margin-left: auto;
-    height: 400px;
+    height: 450px;
+    opacity: 0.6;
 }
+@media  screen and (max-width: 1000px) {
+    #trash-img {
+        margin-top: -50px;
+        margin-right: 0;
+        right: 3px;
+        /* width: 30%; */
+        margin-left: auto;
+        height: 250px;
+    }
+}
+
 
 .top-right-about {
     color: black;
     position: absolute;
-    margin-top: 50px;
-    left: 650px;
+    right:20px;
+    margin-top:-250px;
     margin-left: auto;
 }
 
@@ -158,14 +189,16 @@ button {
     .top-right-about {
         color: black;
         position: absolute;
-        margin-top: 5px;
-        left: 200px;
+        margin-top: 30px;
+        right: 5px;
+        /* left: 320px; */
         margin-left: auto;
+        font-size: 0.7em;
     }
 }
 #consulting {
-    margin-top: 80px;
-    transform:rotate(-15deg);
+    margin-top: 00px;
+    transform:rotate(-25deg);
     left: 0px;
     position: absolute;
     text-align: left;
@@ -173,11 +206,12 @@ button {
 @media screen and (max-width: 1000px) {
     #consulting {
         font-size: large;
-        margin-top: 0px;
-        transform:rotate(-15deg);
-        left: 10px;
+        margin-top: -30px;
+        transform:rotate(-26deg);
+        left: 0px;
         position: absolute;
         text-align: left;
+        font-size: 1em;
     }  
 }
 .bottomtotop {
@@ -209,14 +243,24 @@ button {
     /* top: 450px; */
     writing-mode: vertical-rl;
     text-orientation: mixed;
-    margin-top:300px;
+    margin-top:100px;
     width: 50%;
-    padding: 100px;
+    /* padding: ; */
     text-align: center;
+}
+@media screen and (max-width: 1000px) {
+    .txt-body {
+        writing-mode: vertical-rl;
+        margin-top:30px;
+        width: 50%;
+        padding: 200px;
+        text-align: left;
+        font-size: 0.8em;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
 }
 .txt-mode {
     writing-mode: horizontal-tb;
-    text-align: end;
 }
 
 /***********************************************************************
@@ -235,16 +279,27 @@ button {
 .grid-footer {
     /* display: grid;
     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); */
-    margin-top: 300px;
+    margin-top: 50px;
     position: absolute;
     right: 0;
     width: 1000px;
     margin-left: auto;
-    height: 400px;
+    height: 470px;
     background: rgb(8,32,52);
     background: linear-gradient(90deg, rgba(8,32,52,1) 17%, rgba(11,44,69,1) 37%);
-    width: 60%;
-    border-radius: 100% 0 0 0;
+    width: 90%;
+    /* border-radius: 100% 0 0 0; */
+    /* border-radius: 83% 17% 0% 100% / 92% 10% 90% 8% */
+    ;
+    /* clip-path: polygon(83% 0, 100% 0, 100% 100%, 0 100%, 0 68%); */
+    /* clip-path: polygon(85% 5%, 100% 0, 100% 100%, 0 100%, 3% 85%); */
+    /* border-radius: 75% 26% 0% 7% / 79% 21% 10% 100% */
+    /* border-radius: 57% 57% 0% 10% / 50% 5% 100% 50% */
+    border-radius: 100% 0px 0px;
+
+
+    ;
+
     /* border-radius:79% 21% 0% 100% / 94% 28% 72% 6%;  */
     /* clip-path: polygon(100% 0%, 100% 47%, 100% 100%, 0 100%, 0 53%, 32% 17%); */
 
@@ -256,18 +311,25 @@ button {
     margin-top: 70px;
     right: 0;
     bottom: 0;
-    width: 90%;
-    height: 330px;
+    width: 98%;
+    height: 400px;
     margin-left: auto;
     border-radius: 100% 0 0 0;
+    /* border-radius: 49% 91% 0% 100% / 100% 29% 100% 0%; */
+
+
+
+    /* clip-path: polygon(0 100%, 0 100%, 100% 0%, 100% 100%); */
+
 }
 #news {
     color: white;
     position: absolute;
-    top: 0;
+    top: 10px;
     right: 30px;
     margin-left: auto;
 }
+
 .ml6 {
     position: relative;
     font-weight: 900;
@@ -410,5 +472,4 @@ button {
     justify-content: left;
     top: 50%;
     width: 100%;
-} 
-
+}
