--- a/style.css
+++ b/style.css
@@ -85,26 +85,28 @@ a {
 
 .background {
     display: block;
-    width: 40%;
+    width: 50%;
     height: 10%;
-    margin-top: -29.6%;
+    margin-top: -36.8%;
     /* display: flex; */
     /* transform:rotate(-25deg); */
     /* justify-items: flex-end; */
     /* clip-path: polygon(0 80%, 100% 28%, 100% 43%, 0% 100%); */
     clip-path: polygon(0 69%, 100% 26%, 100% 45%, 0 86%);
 
-    border-bottom-right-radius: 100%;
-    border-top-right-radius: 50%
+    border-bottom-right-radius:100%;
+    border-top-right-radius: 100%
 
 }
-/* @media only screen and (max-width: 1000px) {
+
+@media  screen and (max-width: 800px) {
     .background {
         display: block;
-        width: 40%;
+        width: 50%;
         height: 10%;
-        margin-top: -30%;
-} */
+        margin-top: -37.1%;
+    }
+}
 
   /* cover */
 .container {
@@ -163,7 +165,7 @@ a {
     /* width: 27%; */
     margin-left: auto;
     height: 450px;
-    opacity: 0.6;
+    opacity: 0.3;
 }
 @media  screen and (max-width: 1000px) {
     #trash-img {
