--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ a {
     clip-path: polygon(0 69%, 100% 26%, 100% 45%, 0 86%);
 
     border-bottom-right-radius:100%;
-    border-top-right-radius: 100%
+    border-top-right-radius: 100%;
 
 }
 
@@ -199,11 +199,12 @@ a {
     }
 }
 #consulting {
-    margin-top: 00px;
+    margin-top: -100px;
     transform:rotate(-25deg);
-    left: 0px;
+    left: 10px;
     position: absolute;
     text-align: left;
+    font-size: 2.5em;
 }
 @media screen and (max-width: 1000px) {
     #consulting {
@@ -263,6 +264,7 @@ a {
 }
 .txt-mode {
     writing-mode: horizontal-tb;
+
 }
 
 /***********************************************************************
@@ -336,9 +338,9 @@ a {
     position: relative;
     font-weight: 900;
     font-size: 1.3em;
-  }
+}
   
-  .ml6 .text-wrapper {
+ .ml6 .text-wrapper {
     position: relative;
     display: inline-block;
     padding-top: 0.2em;
@@ -351,127 +353,3 @@ a {
     display: inline-block;
     line-height: 1em;
   }
-
-
-
-/* sectio{
-    bottom: 0;
-    width: 100%;
-    height: 350px;
-
-} */
-
-/* .box-foo {
-    position: absolute;
-    top: 950px;
-    right: 0;
-    width: 60%;
-    margin-left: auto;
-} */
-
-/* .footer-container {
-    position: relative;
-    bottom: 0;
-    width: 100%;
-
-} */
-
-/* .container-box {
-    height: 80%;
-    width: 60%;
-    bottom: 0;
-    background: rgb(8,32,52);
-    background: linear-gradient(90deg, rgba(8,32,52,1) 17%, rgba(11,44,69,1) 37%);
-} */
-
-
-
-/* img.triangle { */
-    /* the polygon() function takes a comma-separated list
-       of x y positions in relation to the origin 0 0 point
-       (the top-left) of the element, using those points
-       to form a line from one to the next (and from the last
-       to the first): */
-    /* -webkit-clip-path: polygon(100%  100% , 0 0, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 0 100%);
-} 
-
-
-*/
-/*
-.box > img {
-    display: flex;
-    flex-flow: column;
-    position: relative;
-    right: 0;
-    justify-items: flex-end;
-    margin-top: 20px;
-
-
-}
-.img-box {
-    height: 50vh;
-    width: auto;
-    right: 0px;
-    text-align:right;
-    float:right;
-    margin-left:100px;
-    clear:right;
-
-
-    /* background-position: right; */
-
-/* } */
-
-
-/* .container {
-    position: absolute;
-    top: 450px;
-    right: 0;
-    margin-left: auto;
-
-
-}
-/* .box-cont { */
-    /* position: absolute;
-    top: 100px;
-    right: 0;
-    margin-left: auto; */
-    /* height: 50vh; */
-    /* width: auto; */
-    /* right: 100px; */
-    /* text-align:center; */
-/* } */
-
-/* .top-right-about {
-    position: absolute;
-    top: 70px;
-    right: 20px;
-    margin-left: auto;
-} */
-/* .top-right-box {
-    position: absolute;
-    top: 50px;
-    right: 100px;
-    margin-left: auto;
-} */
-
-/* styling text */
-
-
-/*  
-.text-container {
-    position: absolute;
-    top: 450px;
-}
-#consulting {
-    transform:rotate(-6deg);
-    left: 50px;
-    line-height: 50px;
-    margin-top: -200px;
-    position: absolute;
-    text-align: left;
-    justify-content: left;
-    top: 50%;
-    width: 100%;
-}
